feat(server): search endpoint
